# lock-defaults

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/: get_status.yml
.github/actions/get_status/: action.yml  get_version_status.sh
.github/workflows/: auto_publish.yml  publish.yml  test.yml  test_publish.yml
src/lock_defaults/without_paramspec/: lock_defaults.py
tests/: test_lock_defaults.py  test_meta.py
