[tool.poetry]
name = "lock-defaults"
version = "0.1.0"
description = "Helper decorator to lock default mutable values"
authors = ["Alex Parsons"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"